--- a/index.html
+++ b/index.html
@@ -1784,7 +1784,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-column">
+                <!--<div class="footer-column">
                     <h3>Newsletter</h3>
                     <p>Subscribe to our newsletter for the latest updates and insights.</p>
                     <div class="newsletter">
@@ -1793,7 +1793,7 @@
                             <button type="submit"><i class="fas fa-paper-plane"></i></button>
                         </form>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2023 Avail Technologies. All Rights Reserved.</p>
@@ -1933,4 +1933,5 @@
         });
     </script>
 </body>
+
 </html>
