--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://avail.co.zw" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Viewport for Mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -2503,3 +2504,4 @@
     </script>
 </body>
 </html>
+
