--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="twitter:url" content="https://avail.co.zw/">
     <meta property="twitter:title" content="Avail Software | Custom Business Software Development in Zimbabwe">
     <meta property="twitter:description" content="Innovative software solutions built for your business. Web, mobile, and cloud development experts.">
-    <meta property="twitter:image" content="https://avail.co.zw/img/logo.PNG">
+    <meta property="twitter:image" content="https://avail.co.zw/img/logo_min.PNG">
 
     <!-- Structured Data for Local Business (JSON-LD) -->
     <script type="application/ld+json">
@@ -2504,4 +2504,5 @@
     </script>
 </body>
 </html>
+
 
