--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       "@type": "ProfessionalService",
       "name": "Avail Software",
       "url": "https://avail.co.zw",
-      "logo": "https://avail.co.zw/images/avail-logo.png",
+      "logo": "https://avail.co.zw/images/logo_min.png",
       "description": "Custom software development company specializing in web, mobile, and cloud applications.",
       "address": {
         "@type": "PostalAddress",
@@ -2504,5 +2504,6 @@
     </script>
 </body>
 </html>
+
 
 
