--- a/index.html
+++ b/index.html
@@ -1894,8 +1894,8 @@
         </div>
     </section>
 
-    <!-- <!-- Partners Section -->
-    <section class="partners" id="partners">
+    <!-- Partners Section -->
+    <!--<section class="partners" id="partners">
         <div class="container">
             <h2>Our Partners</h2>
             <p class="section-intro">Strategic alliances that enhance our capabilities</p>
@@ -2494,4 +2494,5 @@
         window.addEventListener('load', updateNavIndicator);
     </script>
 </body>
+
 </html>
