--- a/index.html
+++ b/index.html
@@ -1601,9 +1601,13 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1 class="fade-in">
-                        Bespoke <span class="accent">Software Solutions</span> For A Classy Experience
-                    </h1>
+                    <h2 class="fade-in">
+                        <!-- Bespoke <span class="accent">Software Solutions</span> For A Classy Experience -->
+                        Branding & Disign <br>
+                        Social Media & Websites <br>
+                        Custom Business Software <br>
+                        Cyber Security & IT Consultancy
+                    </h2>
                     <p class="fade-in">We create premium software solutions that simplify complex processes, delivering significant time savings and cost reduction for discerning businesses.</p>
                     <div class="hero-btns">
                         <a href="#contact" class="btn slide-in-left">Start Your Project</a>
@@ -2496,3 +2500,4 @@
 </body>
 
 </html>
+
